[package]
name = "request-id"
version = "0.2.0"
edition = "2021"
authors = ["Vidhan Bhatt <me@vidhan.io>"]
description = "A few common request id implementations for use with tower-http"
license = "MIT OR Apache-2.0"
repository = "https://github.com/vidhanio/request-id"
readme = "README.md"
keywords = ["tower", "tower-http", "request-id"]
categories = ["web-programming", "web-programming::http-server"]

[dependencies]
uuid = { version = "1", optional = true }
ulid = { version = "1", optional = true }
tower-http = { version = "0.4.0", features = ["request-id", "util"] }
hyper = "0.14"


[features]
uuid = ["uuid/v4"]
ulid = ["dep:ulid"]
